cmake_minimum_required(VERSION 3.1.0)
project(amp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(SOURCES main.cpp mainwindow.cpp musicmodel.cpp nowplaying.cpp song.cpp scanner.cpp)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Multimedia REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_search_module(TAGLIB REQUIRED taglib)
add_executable(amp WIN32 ${SOURCES})
target_link_libraries(amp Qt5::Widgets)
target_link_libraries(amp Qt5::Multimedia)
target_link_libraries(amp ${TAGLIB_LIBRARIES})
target_compile_options(amp PRIVATE ${TAGLIB_CFLAGS})